--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-server.port=8037
-
 #Url donde esta el servicio de la BD y el nombre de la base de datos
 spring.datasource.url=jdbc:postgresql://localhost:5432/challenge
 
@@ -14,3 +12,5 @@ spring.jpa.hibernate.ddl-auto= update
 
 #[opcional]Imprime en tu consola las instrucciones hechas en tu base de datos.
 spring.jpa.show-sql = true
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
